k8s/tomcat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: tomcat
  template:
    metadata:
      labels:
        component: tomcat
    spec:
      containers:
        - name: tomcat
          image: davidcki/brightspot-test-tomcat
          ports:
            - containerPort: 5005
