k8s/apache-web-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: apache
  ports:
    - port: 80
      targetPort: 80
