k8s/tomcat-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: tomcat
  ports:
    - port: 5005
      targetPort: 5005
